Apply suggestions from code review
Co-authored-by: Hilary James Oliver <hilary.j.oliver@gmail.com>
Co-authored-by: Tim Pillinger <26465611+wxtim@users.noreply.github.com>
Co-authored-by: Ronnie Dutta <61982285+MetRonnie@users.noreply.github.com>

--- a/changes.d/6817.fix.md
+++ b/changes.d/6817.fix.md
@@ -1,1 +1,2 @@
-Fixes reload failures about orphaned tasks.
+Fixes two rare bugs associated with reloading the workflow configuration
+after removing tasks or xtriggers from it.
